--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: php node_js
+language: php
 
 php:
   - '5.4'
@@ -7,13 +7,6 @@ php:
   - '7.0'
   - hhvm
   - nightly
-
-node_js:
-  - "6"
-  - "6.1"
-  - "5.11"
-  - "0.6"
-  - "iojs"
 
 install:
    - composer install
