--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: php
 
 php:
-  - '5.4'
   - '5.5'
   - '5.6'
   - '7.0'
   - hhvm
   - nightly
+  
+node_js:
+  - "6"
 
 install:
    - composer install
